Added description and formType fields on the form. Added support to view and order without save it.

--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,6 @@
     "require": {
         "symfony/validator": "^4.2",
         "twig/twig": "^2.0",
-        "dompdf/dompdf": "^0.8.3",
-        "symfony/routing": "^4.2",
-        "symfony/http-foundation": "^4.2",
-        "symfony/config": "^4.2"
+        "dompdf/dompdf": "^0.8.3"
     }
 }
