--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,17 @@
             "email": "sbarbosa115@gmail.com"
         }
     ],
+    "config": {
+        "platform": {
+            "php": "7.0"
+        }
+    },
     "autoload": {
         "psr-4": {"App\\": "src/"}
     },
     "minimum-stability": "RC",
     "require": {
-        "symfony/validator": "^4.2",
+        "symfony/validator": "*",
         "twig/twig": "^2.0",
         "dompdf/dompdf": "^0.8.3"
     }
